--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Monteserrat";
+  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   --background-primary-color: #ffffff;
   --background-secondary-color: #f5f5f5;
@@ -7,8 +14,11 @@
   --button-secaondary-color: #b81515;
 
   --text-primary-color: #222222;
-  --text-secondary-color:#ffffff;
-  
+  --text-secondary-color: #ffffff;
+
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
 }
 
 body,
