--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Monteserrat";
+  font-family: "Montserrat";
   src: url(../fonts/Montserrat-VariableFont_wght.ttf);
   font-style: normal;
   font-display: swap;
@@ -35,4 +35,8 @@ button {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat";
 }
