--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,14 @@ header {
   height: 64px;
 }
 
+.logo .logo-mobile {
+  display: block;
+}
+
+.logo .logo-desktop {
+  display: none;
+}
+
 .navigation-menu {
   margin-top: 20px;
 }
@@ -71,5 +79,21 @@ nav {
   }
   .list-links li {
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header {
+    padding: 38px 120px;
+  }
+  .logo img {
+    width: 260px;
+    height: 64px;
+  }
+  .logo .logo-desktop {
+    display: block;
+  }
+  .logo .logo-mobile {
+    display: none;
   }
 }
