--- a/css/hero.css
+++ b/css/hero.css
@@ -4,3 +4,18 @@
   background: url(../img/hero/Banner-hero-mobile.jpg) no-repeat;
   background-size: cover;
 }
+
+@media screen and (min-width: 768px) {
+  .hero-img {
+    height: 620px;
+    background: url(../img/hero/Banner-hero-tablet.jpg) no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero-img {
+    background: url(../img/hero/Banner-hero-desktop.jpg) no-repeat;
+    background-size: cover;
+  }
+}
