--- a/css/hero.css
+++ b/css/hero.css
@@ -5,11 +5,25 @@
   background-size: cover;
 }
 
+.hero h2 {
+  padding: 88px 24px;
+  margin: 0px;
+  text-align: center;
+  font-weight: var(--text-weight);
+  font-size: 20px;
+  line-height: 1.5;
+}
+
 @media screen and (min-width: 768px) {
   .hero-img {
     height: 620px;
     background: url(../img/hero/Banner-hero-tablet.jpg) no-repeat;
     background-size: cover;
+  }
+
+  .hero h2 {
+    padding: 88px 60px;
+    font-size: 32px;
   }
 }
 
@@ -17,5 +31,26 @@
   .hero-img {
     background: url(../img/hero/Banner-hero-desktop.jpg) no-repeat;
     background-size: cover;
+  }
+
+  .hero h2 {
+    padding: 88px 120px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero-img {
+    background: url(../img/hero/Banner-hero-desktop.jpg) no-repeat;
+    background-size: cover;
+  }
+
+  .hero h2 {
+    padding: 88px 120px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .hero h2 {
+    padding: 88px 160px;
   }
 }
