--- a/css/global.css
+++ b/css/global.css
@@ -57,8 +57,29 @@ body {
   margin: 16px auto 32px auto;
 }
 
+.button {
+  display: inline-block;
+  width: 280px;
+  height: 64px;
+  color: var(--text-secondary-color);
+  background-color: var(--button-secaondary-color);
+  font-size: 20px;
+  font-weight: var(--title-weight);
+  text-decoration: none;
+  border-radius: 16px;
+  line-height: 64px;
+}
+
+
+
 @media screen and (min-width: 768px) {
   .section-title h2 {
     font-size: 32px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .button:hover{
+    background-color: var(--button-primary-color);
   }
 }
