--- a/css/offers.css
+++ b/css/offers.css
@@ -23,13 +23,28 @@
 }
 
 .card header h3 {
-    font-size: 40px;
-    font-weight: var(--title-weight);
-    margin: 8px 0 0;
+  font-size: 40px;
+  font-weight: var(--title-weight);
+  margin: 8px 0 0;
 }
 
-.card header span{
-    display: block;
-    font-size: 32px;
-    margin-top: 24px;
+.card header span {
+  display: block;
+  font-size: 32px;
+  margin-top: 24px;
+}
+
+@media screen and (min-width: 1024px) {
+  .card {
+    width: 588px;
+    height: 308px;
+  }
+
+  .card header h3 {
+    font-size: 48px;
+  }
+
+  .card header span {
+    font-size: 40px;
+  }
 }
