--- a/css/global.css
+++ b/css/global.css
@@ -42,6 +42,16 @@ body {
   color: var(--text-primary-color);
 }
 
+section {
+  width: 312px;
+  margin: 0 auto 88px;
+}
+
+.hero {
+  width: 100%;
+  margin: 0;
+}
+
 .section-title h2 {
   font-size: 28px;
   font-weight: var(--title-weight);
@@ -57,9 +67,22 @@ body {
   margin: 16px auto 32px auto;
 }
 
+.content-title {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 24px 0;
+}
+
+.content-text {
+  margin-bottom: 24px;
+  line-height: 32px;
+  font-size: 20px;
+  font-weight: var(--text-weight);
+}
+
 .button {
   display: inline-block;
-  width: 280px;
+  min-width: 280px;
   height: 64px;
   color: var(--text-secondary-color);
   background-color: var(--button-secaondary-color);
@@ -68,18 +91,31 @@ body {
   text-decoration: none;
   border-radius: 16px;
   line-height: 64px;
+  text-align: center;
 }
 
-
-
 @media screen and (min-width: 768px) {
+  section {
+    width: 648px;
+  }
+
   .section-title h2 {
     font-size: 32px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .button:hover{
+  section {
+    width: 900px;
+  }
+
+  .button:hover {
     background-color: var(--button-primary-color);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  section {
+    width: 1200px;
   }
 }
